--- a/index.html
+++ b/index.html
@@ -4,11 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CYBERTISE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="shortcut icon" href="./assets/images/svg/favico.svg" type="image/x-icon">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <title>CYBERTISE</title>
+    <meta name="title" content="CYBERTISE">
+    <meta name="description" content="Experts in Cyber Security">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="CYBERTISE">
+    <meta property="og:description" content="Experts in Cyber Security">
+    <meta property="og:image" content="https://i.ibb.co/sJ3mq6R/meta.png">
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="CYBERTISE">
+    <meta property="twitter:description" content="Experts in Cyber Security">
+    <meta property="twitter:image" content="https://i.ibb.co/sJ3mq6R/meta.png">
 </head>
 
 <body>
@@ -64,12 +77,13 @@
         </div>
     </header>
     <section class="bg_dark position-relative">
-        <div class="position-absolute EllipseR1 z-0">
+        <div class="position-absolute EllipseR1 z-1">
             <img src="./assets/images/webp/EllipseR1.webp" alt="EllipseR1" class="w-100">
         </div>
         <div class="container2">
             <div class=" d-flex justify-content-center">
-                <div class="blur_img w-100 position-relative z-1 d-flex align-items-center justify-content-center">
+                <div class="blur_img w-100 position-relative z-2 d-flex align-items-center justify-content-center"
+                    data-aos="fade-up" data-aos-duration="2000">
                     <div class="position-absolute elipsebg z-0 d-none d-md-block">
                         <img src="./assets/images/webp/Ellipse839.webp" alt="Ellipse839" class="w-100">
                     </div>
@@ -88,7 +102,8 @@
                                     Served</p>
                             </div>
                         </div>
-                        <div class="col-12 z-2 col-sm-4 mt-4 mt-sm-0 mb-4 mb-sm-0 d-flex flex-column align-items-center">
+                        <div
+                            class="col-12 z-2 col-sm-4 mt-4 mt-sm-0 mb-4 mb-sm-0 d-flex flex-column align-items-center">
                             <div class="d-flex flex-column align-items-center">
                                 <h3 class="mb-0 color_green fw_500 lh_52 fs_xl ff_outfit text-center">350K+</h3>
                                 <p class="mb-0 fs_md ff_outfit lh_26 fw_400 text-center color_white pt-3">Users
@@ -99,10 +114,11 @@
                 </div>
             </div>
             <div class="row pt-5 pt_md_103 pb-4 pb_md_60">
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-6 z-2" data-aos="fade-up" data-aos-duration="2000">
                     <img src="./assets/images/webp/frame1.webp" alt="frame1" class="w-100 w_512">
                 </div>
-                <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-end">
+                <div class="col-12 z-2 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-end"
+                    data-aos="fade-up" data-aos-duration="2000">
                     <div class="w_527">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit text-capitalize">Are you sure your
                             <span class="color_green">data is safe</span>? Neither are we.
@@ -137,7 +153,8 @@
                     nisl dolor dui est. </p>
             </div>
             <div class="row pt_40 pb-5 pb_md_113 justify-content-center">
-                <div class="col-12 col-sm-6 col-md-4 z-2 d-flex justify-content-center">
+                <div class="col-12 col-sm-6 col-md-4 z-2 d-flex justify-content-center" data-aos="flip-left"
+                    data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
                             <img src="./assets/images/svg/FeaturesIcons.svg" alt="FeaturesIcons"
@@ -149,7 +166,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0 z-2 d-flex justify-content-center">
+                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-sm-0 z-2 d-flex justify-content-center"
+                    data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
                             <img src="./assets/images/svg/FeaturesIcons2.svg" alt="FeaturesIcons"
@@ -163,7 +181,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-md-0 z-2 d-flex justify-content-center">
+                <div class="col-12 col-sm-6 col-md-4 mt-4 mt-md-0 z-2 d-flex justify-content-center"
+                    data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000">
                     <div class="service_card h-100 d-flex flex-column justify-content-center">
                         <div class="d-flex align-items-center justify-content-center flex-column">
                             <img src="./assets/images/svg/FeaturesIcons3.svg" alt="FeaturesIcons"
@@ -188,7 +207,8 @@
         </div>
         <div class="container2">
             <div class="row pt-sm-5 flex-column-reverse flex-md-row pb_80 pb-4">
-                <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-start z-2">
+                <div class="col-12 col-md-6 mt-5 mt-md-0 d-flex align-items-center justify-content-start z-2"
+                    data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
                     <div class="w_527">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit ">Offensive <span
                                 class="color_green">Security Experts</span></h2>
@@ -207,30 +227,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6 z-2">
+                <div class="col-12 col-md-6 z-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+                    data-aos-duration="2000">
                     <img src="./assets/images/webp/Frame2.webp" alt="frame2" class="w-100">
                 </div>
             </div>
         </div>
     </section>
     <section class="bg_dark service_bg position-relative" id="Product">
-        <div class="EllipseR2 position-absolute z-0 d-none d-md-block">
+        <div class="EllipseR2 position-absolute z-1 d-none d-md-block">
             <img src="./assets/images/webp/EllipseR2.webp" alt="EllipseR2" class="w-100">
         </div>
         <div class="container2 z-1">
             <div class="row py_100 py-5 align-items-center justify-content-center z-1">
-                <div class="col-12 col-md-6 z-1">
+                <div class="col-12 col-md-6 z-2" data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+                    data-aos-duration="2000">
                     <img src="./assets/images/webp/frame3.webp" alt="frame3" class="w-100 w_476">
                 </div>
-                <div
-                    class="col-12 col-md-6 mt-5 z-1 mt-md-0 d-flex align-items-center flex-column justify-content-center">
+                <div class="col-12 col-md-6 mt-5 z-2 mt-md-0 d-flex align-items-center flex-column justify-content-center"
+                    data-aos="fade-up" data-aos-anchor-placement="top-bottom" data-aos-duration="2000">
                     <div class="d-flex flex-column w_517">
                         <h2 class="mb-0 color_white fw_400 lh_57 fs_xl ff_outfit">Further <span class="color_green">
                                 Services</span></h2>
                         <p class="mb-0 pt_10 fs_md color_white op_80 lh_24 fw_400 ff_outfit">Neben den oben genannten
                             Kernkompetenzen bieten wir auch weitere IT-Sicherheitsdienstleistungen in diesem Bereich an.
                         </p>
-                        <h3 class="mb-0 fs_lg lh_33 fw_600 color_white">Awareness Audits</h3>
+                        <h3 class="mb-0 fs_lg lh_33 fw_600 color_white pt_10">Awareness Audits</h3>
                         <div class="border_left mt_10">
                             <p class="mb-0 fs_md lh_24 color_white op_80 ps-3 ff_outfit fw_400">We conduct simulated
                                 phishing tests and social engineering audits to gauge employee readiness, offering
@@ -257,9 +279,15 @@
         <div class="position-absolute EllipseL2 z-1 d-none d-md-block">
             <img src="./assets/images/webp/EllipseL2.webp" alt="EllipseL2" class="w-100 z-0">
         </div>
+        <div class="position-absolute Ellipse844 z-0">
+            <img src="./assets/images/webp/Ellipse844.webp" alt="Ellipse844" class="w">
+        </div>
+        <div class="position-absolute Ellips845 z-0">
+            <img src="./assets/images/webp/Ellips845.webp" alt="Ellips845" class="w-100">
+        </div>
         <div class="container2 pb_171 z-1">
             <div class="d-flex align-items-center justify-content-center pt_80 pt-5 pb_60">
-                <h2 class="mb-0 fs_xl fw_400 lh_57 text-center color_white ff_outfit w_725 text-capitalize">
+                <h2 class="mb-0 fs_xl fw_400 lh_57 z-2 text-center color_white ff_outfit w_725 text-capitalize">
                     Decentralized infrastructure, <span class="color_green">globally distributed.</span></h2>
             </div>
             <img src="./assets/images/webp/globe.webp" alt="globe" class="w-100">
@@ -267,18 +295,20 @@
     </section>
     <section class="bg_dark position-relative" id="Contact">
         <div class="position-absolute last_right d-none d-md-block z-0">
-            <img src="./assets/images/webp/last_right.png" alt="last_right" class="w-100 z-0">
+            <img src="./assets/images/webp/last_right.webp" alt="last_right" class="w-100 z-0">
         </div>
         <div class="container2 pb_140 z-2">
-            <div class="lastbox d-flex flex-column align-items-center z-2">
+            <div class="lastbox d-flex flex-column align-items-center z-2" data-aos="fade-up" data-aos-duration="2000">
                 <h2 class="mb-0 fs_xl fw_400 lh_57 text-center color_white ff_outfit text-capitalize z-2">Get into <span
                         class="color_green">touch</span></h2>
                 <p class="mb-0 mt_10 color_white fs_md lh_24 fw_400 ff_outfit text-center w_628 pb_32 z-2">Defend your
                     business against online threats while leveraging our IT security expertise and experience for
                     comprehensive protection and peace of mind.</p>
                 <div class="d-flex flex-column gap-3 w-100 align-items-center z-2">
-                    <form action="action_page.php" class="formdiv d-flex align-items-center justify-content-between w-100">
-                        <input type="email" id="empyt" placeholder="Enter your email address" style="border: none; outline: none;"
+                    <form action="action_page.php"
+                        class="formdiv d-flex align-items-center justify-content-between w-100">
+                        <input type="email" id="empyt" placeholder="Enter your email address"
+                            style="border: none; outline: none;"
                             class="bg-transparent w-100 color_white fs_md pe-2 lh_24 fw_400 ff_outfit">
                         <button
                             class="bg_green d-none d-sm-block color_black fs_md fw_500 ff_outfit lh_24 home_btn text-nowrap">Sign
@@ -336,7 +366,8 @@
                     <div class="d-flex flex-column gap_25">
                         <h5 class="mb-0 color_white ff_outfit fs_md fw_500 lh_24">Information</h5>
                         <ul class="d-flex flex-column ps-0 mb-0 gap_15">
-                            <li><a href="https://www.google.com/maps/@29.2904069,76.0389249,8z?entry=ttu" target="_blank"
+                            <li><a href="https://www.google.com/maps/@29.2904069,76.0389249,8z?entry=ttu"
+                                    target="_blank"
                                     class="fs_md color_white op_90 ff_outfit fw_400 lh_24 d-flex align-items-center gap_10">
                                     <svg width="28" height="28" viewBox="0 0 28 28" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -381,13 +412,15 @@
                                             </linearGradient>
                                         </defs>
                                     </svg>
-                                    <span class="hover_line position-relative d-inline-block">+123 456 7890</span></a></li>
+                                    <span class="hover_line position-relative d-inline-block">+123 456 7890</span></a>
+                            </li>
                         </ul>
                     </div>
                     <p class="color_white mt_10 fs_md fw_500 mb_12 lh_24 ff_outfit">Follow us </p>
 
                     <ul class="ps-0 mb-0 d-flex gap_10">
-                        <li><a href="https://www.facebook.com/" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://www.facebook.com/" target="_blank"
+                                class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="11" height="17" viewBox="0 0 11 17" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -395,7 +428,8 @@
                                         fill="white" />
                                 </svg>
                             </a></li>
-                        <li><a href="https://www.instagram.com/" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://www.instagram.com/" target="_blank"
+                                class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -408,7 +442,8 @@
                                         stroke-linejoin="round" />
                                 </svg>
                             </a></li>
-                        <li><a href="https://twitter.com/i/flow/login" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://twitter.com/i/flow/login" target="_blank"
+                                class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="17" height="15" viewBox="0 0 17 15" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -416,7 +451,8 @@
                                         fill="white" />
                                 </svg>
                             </a></li>
-                        <li><a href="https://in.linkedin.com/" target="_blank" class="footer_svg d-flex align-items-center justify-content-center">
+                        <li><a href="https://in.linkedin.com/" target="_blank"
+                                class="footer_svg d-flex align-items-center justify-content-center">
                                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <g clip-path="url(#clip0_0_1094)">
@@ -450,6 +486,10 @@
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
     <script src="./assets/js/app.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
