--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <img src="./assets/images/webp/EllipseL2.webp" alt="EllipseL2" class="w-100 z-0">
         </div>
         <div class="position-absolute Ellipse844 z-0">
-            <img src="./assets/images/webp/Ellipse844.webp" alt="Ellipse844" class="w">
+            <img src="./assets/images/webp/Ellipse844.webp" alt="Ellipse844" class="w-100">
         </div>
         <div class="position-absolute Ellips845 z-0">
             <img src="./assets/images/webp/Ellips845.webp" alt="Ellips845" class="w-100">
