--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
         <div class="line"></div>
         <p class="mb-0 fs_md color_white op_80 text-center lh_21 py_12">© 2023 Cybertise</p>
         <button onclick="topFunction()" id="myBtn" title="Go to top" class="bg-opacity-10 bg_green"><img
-                src="./assets/images/svg/top.png" alt=""></button>
+                src="./assets/images/svg/top.png" alt="top"></button>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
