add cursor pointer to footer logo

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="container2 z-1">
             <div class="row pt-5 z-1 pb_60">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 z-1">
-                    <img src="./assets/images/svg/logo.svg" alt="logo">
+                    <img src="./assets/images/svg/logo.svg" alt="logo" class="cursor_p">
                     <p class="mb-0 mt_10 color_white fs_md lh_24 fw_400 op_80 ff_outfit">Lorem Ipsum is simply dummy
                         text of the printing and typesettin industry.</p>
                 </div>
